# poei-bigdata-projet

./: Dockerfile  README.md  docker-compose.yml  hadoop.env  kibana_saved_object.ndjson  pyproject.toml
data-gov/: mesures-exceptionnelles-covid-19-reports-par-departement-x-grand-secteur.json
poei_projet/: __init__.py  data_dept.py  datagovcovid_kafka_consume.py  datagovcovid_kafka_produce.py
tests/: test_poei_projet.py
